5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_651.log
== TEST (2019-04-15 13:28:40) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:18) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M")
	x=(62.1 * a) - 44.7
	print(x)
	
else :
	h=(72.7 * a) - 58
	prins(y)
-- EXECUTION TIME:
0.182389
-- ERROR:
  File "/home/codebench/codes/1636/651/main.py", line 4
    if (s.upper()=="M")
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:19) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M")
	x=(62.1 * a) - 44.7
	print(x)
	
else :
	h=(72.7 * a) - 58
	prins(y)
-- ERROR:
File "XXXX", line 4
    if (s.upper()=="M")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:24) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M")
	x=(62.1 * a) - 44.7
	print(x)
	
else :
	h=(72.7 * a) - 58
	print(y)
-- ERROR:
File "XXXX", line 4
    if (s.upper()=="M")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:38) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(x)
	
else :
	h=(72.7 * a) - 58
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:33:36) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:33:43) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:33:54) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.149785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:34:09) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="H"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.167691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:23) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:50:41) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:50:48) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.157088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:50:53) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:51:13) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 447
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:51:25) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 447
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.124327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:51:26) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 447
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:54:06) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 447
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:54:42) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:54:54) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.190048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:55:19) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:55:32) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- EXECUTION TIME:
0.174942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/651/main.py", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:55:43) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	x=(621 * a) - 447
	print(round(x,2))
	
else :
	h=(727 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:56:37) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="H"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:56:48) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="H"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(y, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:57:07) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="H"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(h, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:57:18) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="H"):
	x=(62.1 * a) - 44.7
	print(round(x,2))
	
else :
	h=(72.7 * a) - 58
	print(round(h, 2))
-- EXECUTION TIME:
0.140392
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:57:37) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	h=(72.7 * a) - 58
	print(round(h, 2))
	
else :
	x=(62.1 * a) - 44.7
	print(round(x,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:57:39) 
-- CODE:
a=float(input("altura em metros: "))
s=input("Sexo M/F: ")

if (s.upper()=="M"):
	h=(72.7 * a) - 58
	print(round(h, 2))
	
else :
	x=(62.1 * a) - 44.7
	print(round(x,2))
-- EXECUTION TIME:
0.15544
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
